# Grip

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
design-proposals/: checkin-engagement.md  checkin-redesign.md  health-sync-zonder-goedkeuring.md
grip/: database.py  insights.py  notify.py  questions.py  web.py
grip/static/: app.js  manifest.json  style.css  sw.js
grip/templates/: base.html  chat.html  checkin.html  dashboard.html  design_preview.html  focus.html  goals.html  health.html  history.html  insights.html  quarterly.html  trackers.html  weekreview.html
scripts/: backfill_health.py
