[project]
name = "grip"
version = "0.1.0"
description = "Dagelijkse check-ins, weekreviews en doelen tracking — geïnspireerd door Grip"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "anthropic>=0.40.0",
    "aiosqlite>=0.20.0",
]
